# OCG

./: clean.bash  config.con  config.json  main.go  main_test.go  rpc.go
client/: client.go  client_verify.go
contract/: a.wasm  a.wasm.str  config.con  ogq.cpp  rust.wasm.str  sendtx.bash  wasm2binary.py
deploy/: a.wasm.str  config.json  ogq-opt_last.wasm  tohex.py
rustcontract/: Cargo.toml
rustcontract/src/: lib.rs
