[package]
name = "rustcontract"
version = "0.1.0"
authors = ["steven <chenglin@ont.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["cdylib"]

[dependencies]
ontio-std = {git = "https://github.com/ontio/ontology-wasm-cdt-rust"}
staticvec = {version = "0.9.2", default-features=false}
